--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends base %} {% load i18n %}
 {% block content %}
-<form class='login form' id='login-form' action='{% url accounts:login %}' method='POST'>
+<form class='login form' id='login-form' action='{% url "accounts:login" %}' method='POST'>
     {% csrf_token %}
     {% include "forms/bootstrap.html" %}
     <input type='submit' class='btn-primary btn-medium' value='{% trans "Login" %}' />
