--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{% url core:index %}">TEMPLATE</a>
+      <a class="brand" href="{% url "core:index" %}">TEMPLATE</a>
       
       {% if user.is_authenticated %}
       <div class='btn-group pull-right'>
@@ -33,7 +33,7 @@
           <ul class='dropdown-menu'>
                 <li><a href='#'>View profile</a></li>
                 <li class='divider'>&nbsp;</li>
-                <li><a href='{% url accounts:logout %}'>Logout</a></li>
+                <li><a href='{% url "accounts:logout" %}'>Logout</a></li>
           </ul>
       </div>
 
@@ -51,7 +51,7 @@
       {% else %}
           <div class='nav-collapse pull-right'>
                 <ul class='nav'>
-                    <li><a href="{% url accounts:login %}">{% trans "Login" %}</a></li>
+                    <li><a href="{% url "accounts:login" %}">{% trans "Login" %}</a></li>
                 </ul>
           </div>
       {% endif %} {# is auth #}
