--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1,9 +1,7 @@
+@import "footer.css";
 /*spacers */
 .top.spacer{
-    margin-bottom: 60px;
-}
-.spacer{
-    margin-bottom: 15px;
+    height: 60px;
 }
 /* news */
 .post{
@@ -21,4 +19,17 @@
 
 .form-errors{
     color: red;
+}
+.control-group.required > label::before{
+    content: "(*) ";
+    color: #666;
+    font-size: 8pt;
+}
+.control-group.required > label:hover:before{
+    color: red;
+}
+.control-group > .errorlist{
+    margin-left: 180px;
+    color: #b94a48;
+    list-style-type: none;
 }
