--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -3,6 +3,6 @@
 <form class='login form' id='login-form' action='{% url "accounts:login" %}' method='POST'>
     {% csrf_token %}
     {% include "forms/bootstrap.html" %}
-    <input type='submit' class='btn-primary btn-medium' value='{% trans "Login" %}' />
+    <input type='submit' class='btn btn-primary btn-medium' value='{% trans "Login" %}' />
 </form>
 {% endblock %}
