--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends base %} {% load i18n %}
 {% block content %}
-    <h3>BF3 banlist server</h3>
+    <h3><i class='icon-batman'></i> I am batman</h3>
 {% endblock %}
