--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="{% url "core:index" %}">TEMPLATE</a>
+      <a class="brand" href="{% url "core:index" %}">.template</a>
       
       {% if user.is_authenticated %}
       <div class='btn-group pull-right'>
