--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block js %}
 <script type='text/javascript' src='/media/js/jquery-1.7.2.min.js'></script>
-<script type='text/javascript' src='/media/js/bootstrap-2.0.min.js'></script>
+<script type='text/javascript' src='/media/js/bootstrap.min.js'></script>
 <script type='text/javascript' src='/media/js/chosen.jquery.js'></script>
 <script type='text/javascript' src='/media/js/ajax-chosen.min.js'></script>
 {% endblock %}
