migrate css to sass model

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 {% block css %}
 <link rel='stylesheet' href='/media/css/bootstrap.min.css' media='screen'>
 <link rel='stylesheet' href='/media/css/chosen.css' media='screen'>
-<link rel='stylesheet' href='/media/css/main.css' media='screen'>
 <link rel='stylesheet' href='/media/css/whhg.css' media='screen'>
+<link rel='stylesheet' href='/media/styles/main.css' media='screen'>
 {% endblock %}
 {% block js %}
 <script type='text/javascript' src='/media/js/jquery-1.7.2.min.js'></script>
