--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,5 +4,9 @@
     {% csrf_token %}
     {% include "forms/bootstrap.html" %}
     <input type='submit' class='btn btn-primary btn-medium' value='{% trans "Login" %}' />
+    {% if form.errors %}
+        <a class='btn btn-inverse'
+           href='{% url "accounts:password-restore-initiate" %}'>{% trans "Forgot password?" %}</a>
+    {% endif %}
 </form>
 {% endblock %}
