update template, migrate to bower, replace chosen with selec2, update dependencies

--- a/media/less/bootstrap.less
+++ b/media/less/bootstrap.less
@@ -1,7 +1,9 @@
 @import "bootstrap/bootstrap.less";
 @import "bootstrap-chosen/bootstrap-chosen.less";
-@import-once "main.less";
-@import-once "footer.less";
+@import "select2-bootstrap-css/lib/select2-bootstrap";
+
+@import "main.less";
+@import "footer.less";
 
 .form-horizontal.control > .form-group input{
   .form-control;
