--- a/templates/accounts/password_change.html
+++ b/templates/accounts/password_change.html
@@ -1,9 +1,15 @@
 {% extends base %} {% load i18n %}
 {% block content %}
     <h3>{% trans "Password change" %}</h3>
-    <form class='' id='' method='POST' action='{% url "accounts:password-change" %}'>
-        {% csrf_token %}
-        {{ form.as_ul }}
-        <input type='submit' class='btn btn-primary' value='{% trans "Change" %}'>
+
+    <form class='form-horizontal' id='' method='POST' action='{% url "accounts:password-change" %}'>
+      {% csrf_token %}
+        {% include "forms/bootstrap_horizontal.html" with form=form %}
+        <div class='form-group'>
+          <label class='control-label col-lg-2'></label>
+          <div class='col-lg-10'>
+            <input type='submit' class='btn btn-primary' value='{% trans "Change" %}'>
+          </div>
+        </div>
     </form>
 {% endblock %}
