--- a/templates/base.html
+++ b/templates/base.html
@@ -39,9 +39,9 @@
                     {{ user.username }}
                   <i class='caret'></i></a>
                   <ul class='dropdown-menu'>
-                        <li><a href='#'>View profile</a></li>
+                        <li><a href='{{ user.get_profile_url }}'>{% trans "View profile" %}</a></li>
                         <li class='divider'>&nbsp;</li>
-                        <li><a href='{% url "accounts:logout" %}'>Logout</a></li>
+                        <li><a href='{% url "accounts:logout" %}'>{% trans "Logout" %}</a></li>
                   </ul>
                 </li>
                 {% endif %}
