--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>{% load i18n static %}
 {% block css %}
-<link rel='stylesheet' href={% static "components/select2/select2.css" %}>
-  <link rel='stylesheet' href={% static "css/bootstrap.css' media='screen" %}>
-<link rel='stylesheet' href={% static "css/whhg.css' media='screen" %}>
+<link rel='stylesheet' href='{% static "components/select2/select2.css" %}'>
+<link rel='stylesheet' href='{% static "css/bootstrap.css" %}' media='screen'>
+<link rel='stylesheet' href='{% static "css/whhg.css" %}' media='screen'>
 
 {% endblock %}
 {% block js %}
-<script type='text/javascript' src={% static "components/jquery/jquery.min.js" %}></script>
-<script type='text/javascript' src={% static "components/bootstrap/dist/js/bootstrap.min.js" %}></script>
-<script type='text/javascript' src={% static "components/select2/select2.min.js" %}></script>
+<script type='text/javascript' src='{% static "components/jquery/dist/jquery.min.js" %}'></script>
+<script type='text/javascript' src='{% static "components/bootstrap/dist/js/bootstrap.min.js" %}'></script>
+<script type='text/javascript' src='{% static "components/select2/select2.min.js" %}'></script>
 
 {% endblock %}
 </head>
@@ -60,16 +60,16 @@
 </div>
 </body>
 <!-- noty -->
-<script type="text/javascript" src={% static "components/noty/js/noty/jquery.noty.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/promise.js" %}></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/jquery.noty.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/promise.js" %}'></script>
 
-<script type="text/javascript" src={% static "components/noty/js/noty/layouts/top.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/layouts/topLeft.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/layouts/topRight.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/layouts/topCenter.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/layouts/center.js" %}></script>
-<script type="text/javascript" src={% static "components/noty/js/noty/themes/default.js" %}></script>
-<script type="text/javascript" src={% static "js/noty/themes/override.js" %}></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/layouts/top.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/layouts/topLeft.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/layouts/topRight.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/layouts/topCenter.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/layouts/center.js" %}'></script>
+<script type="text/javascript" src='{% static "components/noty/js/noty/themes/default.js" %}'></script>
+<script type="text/javascript" src='{% static "js/noty/themes/override.js" %}'></script>
 
 {% block endjs %}{% endblock %}
 <script type='text/javascript'>
